dfir_rs/tests/compile-fail-stable/surface_forwardref_self2.rs
../compile-fail/surface_forwardref_self2.rs